syntax = "proto3";
package shared.payment.v1;
option go_package = "github.com/jacktantram/payments-api/build/go/shared/payment/v1";


// Represents a card payment method
// WARNING by requesting access to this object it can put the service in PCI scope.
message PaymentMethodCard{
  // Represents the first six digits of the card number
  string card_number = 1;
  // expiry date for the card.
  message ExpiryDate {
    // the month the card will expire
    uint32 month =1;
    // the year the card will expire
    uint32 year = 2;
  }
  // expiry date for card.
  ExpiryDate expiry = 2;
  // The cards 3 digit cvv code.
  string cvv = 3;
}
